Bug 396166 - xul:label@value accessible should implement nsIAccessibleText, r=tbsaunde, roc